The new adventures of a fat cyclist

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,5 @@
 baseURL: "https://marcelorodrigo.com/"
+canonifyURLs: true
 defaultContentLanguage: "en"
 description: "Apaixonado por viagens e bicicletas, brasileiro morando na Holanda"
 enableEmoji: true
