--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -19,7 +19,7 @@ jobs:
           continue-on-error: true
           uses: wjdp/htmltest-action@master
           with:
-            config: .htmltest.yml
+            path: public
         - name: Archive htmltest results
           uses: actions/upload-artifact@v4
           with:
